--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
     <link type= "text/css" href="css/glightbox.min.css" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link rel= "stylesheet" type= "text/css" href= "css/style.css">
+    <script src="./script.js"></script>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
@@ -53,10 +55,13 @@ body::after {
           </a>
           <nav id="navbar" class="navbar">
             <ul>
-              <li><a class="nav-link scrollto active" href="home.html">Home</a></li>
-              <li><a class="nav-link scrollto" href="about.html">About</a></li>
-              <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
-              <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
+              <ul>
+                <li><a class="nav-link scrollto active" href="#" id="home-link">Home</a></li>
+                <li><a class="nav-link scrollto" href="#" id="about-link">About</a></li>
+                <li><a class="nav-link scrollto" href="#" id="portfolio-link">Portfolio</a></li>
+                <li><a class="nav-link scrollto" href="#" id="contact-link">Contact</a></li>
+              </ul>
+              
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav>
